<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">
        <Button
            android:id="@+id/Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/save"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Save"
            android:text="@string/name"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/Save"
        android:layout_alignParentTop="true">
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

            <ImageView
            android:id="@+id/HeroIMage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@android:drawable/ic_menu_camera"
            tools:src="@tools:sample/avatars" />

            <EditText
            android:id="@+id/SuperHero_Name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/HeroIMage"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/HeroIMage"
            android:hint="@string/superhero_name" />

            <EditText
            android:id="@+id/alter_ego_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/HeroIMage"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/HeroIMage"
            android:hint="@string/alterego" />
            <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_below="@+id/HeroIMage"
            android:layout_marginTop="16dp"

            />
            <TextView
            android:id="@+id/Bio_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="16dp"
            android:layout_below="@+id/divider"

            />

            <EditText
            android:id="@+id/bio_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Bio_Text"
            android:layout_marginTop="16dp"
            android:hint="@string/short_bio" />
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/power"
            android:layout_below="@+id/bio_edit"
            android:id="@+id/power_text"
            />
            <RatingBar
            android:id="@+id/power_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/power_text"
            android:layout_centerHorizontal="true"
            android:progressTint="@color/yellow"
            />


        </RelativeLayout>
    </ScrollView>
    </RelativeLayout>

</layout>